2001-11-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	fixed (?) some problem with passing the raise click in ctf to the app

	* fvwm/add_window.c (Reborder):
	* fvwm/virtual.c (MoveViewport):
	(MapDesk):
	(UnmapDesk):
	* fvwm/session.c (SaveWindowStates):
	* fvwm/fvwmdebug.c (DB_WI_WINDOWS):
	don't access stack_next and stack_prev directly but use the access
	functions from stack.h

	* fvwm/stack.c (remove_window_from_stack_ring):
	(add_window_to_stack_ring_after):
	safety patch

	* fvwm/add_window.c (adjust_fvwm_internal_windows):
	(destroy_window):
	when a window becomes scheduled for destruction, remove all traces of it
	from the fvwm internal variable so its not accessed accidentally when
	its fields are no longer valid

2001-10-30  Mikhael Goikhman  <migo@homemail.com>

	* make_fvwmdist.sh:
	strip end of line from date (adjust for a new length)

2001-10-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/module_interface.c (skipModuleAliasToken):
	Allows '/' as alias character

	* NEWS
	Script news

2001-10-27  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	some formatting fixes in TitleStyle entry

2001-10-26  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: FvwmForm: Customize pointers, support ISO_Tab key,
 	buttons can activate on press or release, special pointer during grab,
	arrow key command recall.

2001-10-24  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/bindings.c (ParseBinding):
	* fvwm/bindings.h:
	* fvwm/fvwm2.1:
	binding commands now do not print error messages with Silent

	* fvwm/ConfigFvwmDefaults:
	* NEWS:
	don't use ReverseOrder in the default Alt-Tab like it was in 2.4.0;
	use Silent before Key Help

	* fvwm/add_window.c:
	changed the broken size hints message to notify the owner

	* docs/fvwm.lsm.in:
	small changes

2001-10-19  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	Some FvwmScript news

2001-10-16  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	Some FvwmScript news
