@@ -1,3 +1,8 @@
+2001-11-15  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/bindings.c (activate_binding):
+	Fixed immediate application of mouse/stroke bindings
+	
 2001-11-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleButtonPress):
